--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -22,9 +22,10 @@ keywordclass.tex.luatex=\
 Uchar Udelcode Udelcodenum Udelimiter \
 Udelimiterover Udelimiterunder Umathaccent Umathaxis Umathbinbinspacing \
 Umathbinclosespacing Umathbininnerspacing Umathbinopenspacing Umathbinopspacing Umathbinordspacing \
-Umathbinpunctspacing Umathbinrelspacing Umathchar Umathchardef Umathcharnum \
-Umathclosebinspacing Umathcloseclosespacing Umathcloseinnerspacing Umathcloseopenspacing Umathcloseopspacing \
-Umathcloseordspacing Umathclosepunctspacing Umathcloserelspacing Umathcode Umathcodenum \
+Umathbinpunctspacing Umathbinrelspacing Umathchar Umathcharclass Umathchardef \
+Umathcharfam Umathcharnum Umathcharnumdef Umathcharslot Umathclosebinspacing \
+Umathcloseclosespacing Umathcloseinnerspacing Umathcloseopenspacing Umathcloseopspacing Umathcloseordspacing \
+Umathclosepunctspacing Umathcloserelspacing Umathcode Umathcodenum Umathcodenumdef \
 Umathconnectoroverlapmin Umathfractiondelsize Umathfractiondenomdown Umathfractiondenomvgap Umathfractionnumup \
 Umathfractionnumvgap Umathfractionrule Umathinnerbinspacing Umathinnerclosespacing Umathinnerinnerspacing \
 Umathinneropenspacing Umathinneropspacing Umathinnerordspacing Umathinnerpunctspacing Umathinnerrelspacing \
@@ -55,17 +56,17 @@ initcatcodetable insertht lastsavedboxresourceindex lastsavedimageresourceindex 
 lastxpos lastypos latelua leftghost leftmarginkern \
 letterspacefont localbrokenpenalty localinterlinepenalty localleftbox localrightbox \
 lpcode luaescapestring luastartup luatexbanner luatexrevision \
-luatexversion luafunction mathdir matheqnogapstep mathstyle \
-nokerns nohrule noligs novrule normaldeviate \
-outputbox outputmode pagedir pageheight pagebottomoffset \
-pageleftoffset pagerightoffset pagetopoffset pagewidth pardir \
-pdfextension pdffeedback pdfvariable postexhyphenchar posthyphenchar \
-preexhyphenchar prehyphenchar primitive protrudechars pxdimen \
-randomseed rightghost rightmarginkern rpcode saveboxresource \
-savecatcodetable saveimageresource savepos scantextokens setrandomseed \
-suppressfontnotfounderror suppressifcsnameerror suppresslongerror suppressoutererror suppressmathparerror \
-synctex tagcode textdir tracingfonts uniformdeviate \
-useboxresource useimageresource 
+luatexversion luafunction mathdir matheqnogapstep mathoption \
+mathstyle mathsurroundskip nokerns nohrule noligs \
+novrule normaldeviate outputbox outputmode pagedir \
+pageheight pagebottomoffset pageleftoffset pagerightoffset pagetopoffset \
+pagewidth pardir pdfextension pdffeedback pdfvariable \
+postexhyphenchar posthyphenchar preexhyphenchar prehyphenchar primitive \
+protrudechars pxdimen randomseed rightghost rightmarginkern \
+rpcode saveboxresource savecatcodetable saveimageresource savepos \
+scantextokens setfontid setrandomseed suppressfontnotfounderror suppressifcsnameerror \
+suppresslongerror suppressoutererror suppressmathparerror synctex tagcode \
+textdir tracingfonts uniformdeviate useboxresource useimageresource 
 
 keywordclass.tex.omega=\
 OmegaVersion bodydir chardp charht \
@@ -106,9 +107,10 @@ Alephrevision Alephversion OmegaVersion Omegaminorversion Omegarevision \
 Omegaversion Udelcode Udelcodenum Udelimiter Udelimiterover \
 Udelimiterunder Umathaccent Umathaxis Umathbinbinspacing Umathbinclosespacing \
 Umathbininnerspacing Umathbinopenspacing Umathbinopspacing Umathbinordspacing Umathbinpunctspacing \
-Umathbinrelspacing Umathchar Umathchardef Umathcharnum Umathclosebinspacing \
-Umathcloseclosespacing Umathcloseinnerspacing Umathcloseopenspacing Umathcloseopspacing Umathcloseordspacing \
-Umathclosepunctspacing Umathcloserelspacing Umathcode Umathcodenum Umathconnectoroverlapmin \
+Umathbinrelspacing Umathchar Umathcharclass Umathchardef Umathcharfam \
+Umathcharnum Umathcharnumdef Umathcharslot Umathclosebinspacing Umathcloseclosespacing \
+Umathcloseinnerspacing Umathcloseopenspacing Umathcloseopspacing Umathcloseordspacing Umathclosepunctspacing \
+Umathcloserelspacing Umathcode Umathcodenum Umathcodenumdef Umathconnectoroverlapmin \
 Umathfractiondelsize Umathfractiondenomdown Umathfractiondenomvgap Umathfractionnumup Umathfractionnumvgap \
 Umathfractionrule Umathinnerbinspacing Umathinnerclosespacing Umathinnerinnerspacing Umathinneropenspacing \
 Umathinneropspacing Umathinnerordspacing Umathinnerpunctspacing Umathinnerrelspacing Umathlimitabovebgap \
@@ -180,74 +182,75 @@ long looseness lower lowercase lpcode \
 luaescapestring luastartup luatexbanner luatexrevision luatexversion \
 mag mark marks mathaccent mathbin \
 mathchar mathchardef mathchoice mathclose mathcode \
-mathdir mathinner mathop mathopen mathord \
-mathpunct mathrel mathstyle mathsurround maxdeadcycles \
-maxdepth meaning medmuskip message middle \
-mkern month moveleft moveright mskip \
-muexpr multiply muskip muskipdef mutoglue \
-newlinechar noalign noboundary noexpand noindent \
-nokerns nohrule noligs novrule nolimits \
-nolocaldirs nolocalwhatsits nonscript nonstopmode normaldeviate \
-nulldelimiterspace nullfont number numexpr odelcode \
-odelimiter omathaccent omathchar omathchardef omathcode \
-omit openin openout or oradical \
-outer output outputbox outputpenalty over \
-overfullrule overline overwithdelims pagebottomoffset pagedepth \
-pagedir pagediscards pagefilllstretch pagefillstretch pagefilstretch \
-pagegoal pageheight pageleftoffset pagerightoffset pageshrink \
-pagestretch pagetopoffset pagetotal pagewidth par \
-pardir parfillskip parindent parshape parshapedimen \
-parshapeindent parshapelength parskip patterns pausing \
-pdfadjustspacing pdfannot pdfcatalog pdfcolorstack pdfcolorstackinit \
-pdfcompresslevel pdfcopyfont pdfcreationdate pdfdecimaldigits pdfdest \
-pdfdestmargin pdfdraftmode pdfeachlineheight pdfeachlinedepth pdfendlink \
-pdfendthread pdfextension pdfvariable pdffirstlineheight pdffontattr \
-pdffontexpand pdffontname pdffontobjnum pdffontsize pdfgamma \
-pdfgentounicode pdfglyphtounicode pdfhorigin pdfignoreddimen pdfimageaddfilename \
-pdfimageapplygamma pdfimagegamma pdfimagehicolor pdfimageresolution pdfincludechars \
-pdfinclusioncopyfonts pdfinclusionerrorlevel pdfinfo pdfinsertht pdflastannot \
-pdflastlinedepth pdflastlink pdflastobj pdflastxform pdflastximage \
-pdflastximagepages pdflastxpos pdflastypos pdflinkmargin pdfliteral \
-pdfmapfile pdfmapline pdfminorversion pdfnames pdfnoligatures \
-pdfnormaldeviate pdfobj pdfobjcompresslevel pdfoutline pdfoutput \
-pdfpageattr pdfpagebox pdfpageheight pdfpageref pdfpageresources \
-pdfpagesattr pdfpagewidth pdfpkmode pdfpkresolution pdfprimitive \
-pdfprotrudechars pdfpxdimen pdfrandomseed pdfrefobj pdfrefxform \
-pdfrefximage pdfreplacefont pdfrestore pdfretval pdfsave \
-pdfsavepos pdfsetmatrix pdfsetrandomseed pdfstartlink pdfstartthread \
-pdftexbanner pdftexrevision pdftexversion pdfthread pdfthreadmargin \
-pdftracingfonts pdftrailer pdfuniformdeviate pdfuniqueresname pdfvorigin \
-pdfxform pdfxformattr pdfxformname pdfxformresources pdfximage \
-penalty postdisplaypenalty postexhyphenchar posthyphenchar predisplaydirection \
-predisplaypenalty predisplaysize preexhyphenchar prehyphenchar pretolerance \
-prevdepth prevgraf primitive protected pxdimen \
-quitvmode radical raise randomseed read \
-readline relax relpenalty right rightghost \
-righthyphenmin rightmarginkern rightskip romannumeral rpcode \
-saveboxresource saveimageresource savepos savecatcodetable savinghyphcodes \
-savingvdiscards scantextokens scantokens scriptfont scriptscriptfont \
-scriptscriptstyle scriptspace scriptstyle scrollmode setbox \
-setlanguage setrandomseed sfcode shipout show \
-showbox showboxbreadth showboxdepth showgroups showifs \
-showlists showthe showtokens skewchar skip \
-skipdef spacefactor spaceskip span special \
-splitbotmark splitbotmarks splitdiscards splitfirstmark splitfirstmarks \
-splitmaxdepth splittopskip string suppressfontnotfounderror suppressifcsnameerror \
-suppresslongerror suppressoutererror synctex tabskip tagcode \
-textdir textfont textstyle the thickmuskip \
-thinmuskip time toks toksdef tolerance \
-topmark topmarks topskip tracingassigns tracingcommands \
-tracingfonts tracinggroups tracingifs tracinglostchars tracingmacros \
-tracingnesting tracingonline tracingoutput tracingpages tracingparagraphs \
-tracingrestores tracingscantokens tracingstats uccode uchyph \
-underline unexpanded unhbox unhcopy uniformdeviate \
-unkern unless unpenalty unskip unvbox \
-unvcopy uppercase useboxresource useimageresource vadjust \
-valign vbadness vbox vcenter vfil \
-vfill vfilneg vfuzz voffset vrule \
-vsize vskip vsplit vss vtop \
-wd widowpenalties widowpenalty write xdef \
-xleaders xspaceskip year 
+mathdir mathinner mathop mathopen mathoption \
+mathord mathpunct mathrel mathstyle mathsurroundskip \
+mathsurround maxdeadcycles maxdepth meaning medmuskip \
+message middle mkern month moveleft \
+moveright mskip muexpr multiply muskip \
+muskipdef mutoglue newlinechar noalign noboundary \
+noexpand noindent nokerns nohrule noligs \
+novrule nolimits nolocaldirs nolocalwhatsits nonscript \
+nonstopmode normaldeviate nulldelimiterspace nullfont number \
+numexpr odelcode odelimiter omathaccent omathchar \
+omathchardef omathcode omit openin openout \
+or oradical outer output outputbox \
+outputpenalty over overfullrule overline overwithdelims \
+pagebottomoffset pagedepth pagedir pagediscards pagefilllstretch \
+pagefillstretch pagefilstretch pagegoal pageheight pageleftoffset \
+pagerightoffset pageshrink pagestretch pagetopoffset pagetotal \
+pagewidth par pardir parfillskip parindent \
+parshape parshapedimen parshapeindent parshapelength parskip \
+patterns pausing pdfadjustspacing pdfannot pdfcatalog \
+pdfcolorstack pdfcolorstackinit pdfcompresslevel pdfcopyfont pdfcreationdate \
+pdfdecimaldigits pdfdest pdfdestmargin pdfdraftmode pdfeachlineheight \
+pdfeachlinedepth pdfendlink pdfendthread pdfextension pdfvariable \
+pdffirstlineheight pdffontattr pdffontexpand pdffontname pdffontobjnum \
+pdffontsize pdfgamma pdfgentounicode pdfglyphtounicode pdfhorigin \
+pdfignoreddimen pdfimageaddfilename pdfimageapplygamma pdfimagegamma pdfimagehicolor \
+pdfimageresolution pdfincludechars pdfinclusioncopyfonts pdfinclusionerrorlevel pdfinfo \
+pdfinsertht pdflastannot pdflastlinedepth pdflastlink pdflastobj \
+pdflastxform pdflastximage pdflastximagepages pdflastxpos pdflastypos \
+pdflinkmargin pdfliteral pdfmapfile pdfmapline pdfminorversion \
+pdfnames pdfnoligatures pdfnormaldeviate pdfobj pdfobjcompresslevel \
+pdfoutline pdfoutput pdfpageattr pdfpagebox pdfpageheight \
+pdfpageref pdfpageresources pdfpagesattr pdfpagewidth pdfpkmode \
+pdfpkresolution pdfprimitive pdfprotrudechars pdfpxdimen pdfrandomseed \
+pdfrefobj pdfrefxform pdfrefximage pdfreplacefont pdfrestore \
+pdfretval pdfsave pdfsavepos pdfsetmatrix pdfsetrandomseed \
+pdfstartlink pdfstartthread pdftexbanner pdftexrevision pdftexversion \
+pdfthread pdfthreadmargin pdftracingfonts pdftrailer pdfuniformdeviate \
+pdfuniqueresname pdfvorigin pdfxform pdfxformattr pdfxformname \
+pdfxformresources pdfximage penalty postdisplaypenalty postexhyphenchar \
+posthyphenchar predisplaydirection predisplaypenalty predisplaysize preexhyphenchar \
+prehyphenchar pretolerance prevdepth prevgraf primitive \
+protected pxdimen quitvmode radical raise \
+randomseed read readline relax relpenalty \
+right rightghost righthyphenmin rightmarginkern rightskip \
+romannumeral rpcode saveboxresource saveimageresource savepos \
+savecatcodetable savinghyphcodes savingvdiscards scantextokens scantokens \
+scriptfont scriptscriptfont scriptscriptstyle scriptspace scriptstyle \
+scrollmode setbox setfontid setlanguage setrandomseed \
+sfcode shipout show showbox showboxbreadth \
+showboxdepth showgroups showifs showlists showthe \
+showtokens skewchar skip skipdef spacefactor \
+spaceskip span special splitbotmark splitbotmarks \
+splitdiscards splitfirstmark splitfirstmarks splitmaxdepth splittopskip \
+string suppressfontnotfounderror suppressifcsnameerror suppresslongerror suppressoutererror \
+synctex tabskip tagcode textdir textfont \
+textstyle the thickmuskip thinmuskip time \
+toks toksdef tolerance topmark topmarks \
+topskip tracingassigns tracingcommands tracingfonts tracinggroups \
+tracingifs tracinglostchars tracingmacros tracingnesting tracingonline \
+tracingoutput tracingpages tracingparagraphs tracingrestores tracingscantokens \
+tracingstats uccode uchyph underline unexpanded \
+unhbox unhcopy uniformdeviate unkern unless \
+unpenalty unskip unvbox unvcopy uppercase \
+useboxresource useimageresource vadjust valign vbadness \
+vbox vcenter vfil vfill vfilneg \
+vfuzz voffset vrule vsize vskip \
+vsplit vss vtop wd widowpenalties \
+widowpenalty write xdef xleaders xspaceskip \
+year 
 
 keywordclass.tex.xetex=\
 XeTeXversion 
