--- a/context/data/scite/context/scite-context-data-tex.properties
+++ b/context/data/scite/context/scite-context-data-tex.properties
@@ -74,112 +74,112 @@ currentloopiterator currentloopnesting currentlysetmathstyle currentmarks dbox \
 defcsname deferred detokened detokenized dimensiondef \
 dimexperimental dimexpression directlua discretionaryoptions divideby \
 doublepenaltymode dpack dsplit edefcsname edivide \
-edivideby efcode emergencyleftskip emergencyrightskip endlocalcontrol \
-endmathgroup endmvl endsimplegroup enforced etexexprmode \
-etoks etoksapp etokspre eufactor everybeforepar \
-everymathatom everytab exapostrophechar exceptionpenalty expand \
-expandactive expandafterpars expandafterspaces expandcstoken expanded \
-expandedafter expandeddetokenize expandedendless expandedloop expandedrepeat \
-expandparameter expandtoken expandtoks explicitdiscretionary explicithyphenpenalty \
-explicititaliccorrection explicitspace firstvalidlanguage fitnessclasses float \
-floatdef floatexpr flushmarks flushmvl fontcharba \
-fontcharta fontid fontidentifier fontmathcontrol fontspecdef \
-fontspecid fontspecifiedname fontspecifiedsize fontspecscale fontspecslant \
-fontspecweight fontspecxscale fontspecyscale fonttextcontrol forcedleftcorrection \
-forcedrightcorrection formatname frozen futurecsname futuredef \
-futureexpand futureexpandis futureexpandisap gdefcsname givenmathstyle \
-gleaders glet gletcsname glettonothing gluespecdef \
-glyph glyphdatafield glyphoptions glyphscale glyphscriptfield \
-glyphscriptscale glyphscriptscriptscale glyphslant glyphstatefield glyphtextscale \
-glyphweight glyphxoffset glyphxscale glyphxscaled glyphyoffset \
-glyphyscale glyphyscaled gtoksapp gtokspre hbadnessmode \
-hccode hjcode hmcode holdingmigrations hpack \
-hpenalty hyphenationmin hyphenationmode ifabsdim ifabsfloat \
-ifabsnum ifarguments ifboolean ifchkdim ifchkdimension \
-ifchkdimexpr ifchknum ifchknumber ifchknumexpr ifcmpdim \
-ifcmpnum ifcondition ifcramped ifcstok ifdimexpression \
-ifdimval ifempty ifflags iffloat ifhaschar \
-ifhastok ifhastoks ifhasxtoks ifinalignment ifincsname \
-ifinsert ifintervaldim ifintervalfloat ifintervalnum iflastnamedcs \
-iflist ifmathparameter ifmathstyle ifnumexpression ifnumval \
-ifparameter ifparameters ifrelax iftok ifzerodim \
-ifzerofloat ifzeronum ignorearguments ignoredepthcriterion ignorenestedupto \
-ignorepars ignorerest ignoreupto immediate immutable \
-indexedsubprescript indexedsubscript indexedsuperprescript indexedsuperscript indexofcharacter \
-indexofregister inherited initcatcodetable initialpageskip initialtopskip \
-insertbox insertcopy insertdepth insertdistance insertheight \
-insertheights insertlimit insertlinedepth insertlineheight insertmaxdepth \
-insertmode insertmultiplier insertpenalty insertprogress insertshrink \
-insertstorage insertstoring insertstretch insertunbox insertuncopy \
-insertwidth instance integerdef lastarguments lastatomclass \
-lastboundary lastchkdimension lastchknumber lastleftclass lastloopiterator \
-lastnamedcs lastnodesubtype lastpageextra lastparcontext lastpartrigger \
-lastrightclass leftmarginkern lefttwindemerits letcharcode letcsname \
-letfrozen letmathatomrule letmathparent letmathspacing letprotected \
-lettolastnamedcs lettonothing linebreakchecks linebreakoptional linebreakpasses \
-linedirection localbreakpar localbrokenpenalty localcontrol localcontrolled \
-localcontrolledendless localcontrolledloop localcontrolledrepeat localinterlinepenalty localleftbox \
-localleftboxbox localmiddlebox localmiddleboxbox localpretolerance localrightbox \
-localrightboxbox localtolerance lpcode luaboundary luabytecode \
-luabytecodecall luacopyinputnodes luadef luaescapestring luafunction \
-luafunctioncall luametatexmajorversion luametatexminorversion luametatexrelease luatexbanner \
-luatexrevision luatexversion mathatom mathatomglue mathatomskip \
-mathbackwardpenalties mathbeginclass mathboundary mathcharclass mathcharfam \
-mathcharslot mathcheckfencesmode mathclass mathdictgroup mathdictionary \
-mathdictproperties mathdirection mathdiscretionary mathdisplaymode mathdisplaypenaltyfactor \
-mathdisplayskipmode mathdoublescriptmode mathendclass matheqnogapstep mathfontcontrol \
-mathforwardpenalties mathgluemode mathgroupingmode mathinlinepenaltyfactor mathleftclass \
-mathlimitsmode mathmainstyle mathnolimitsmode mathparentstyle mathpenaltiesmode \
-mathpretolerance mathrightclass mathrulesfam mathrulesmode mathscale \
-mathscriptsmode mathslackmode mathspacingmode mathstack mathstackstyle \
-mathstyle mathstylefontid mathsurroundmode mathsurroundskip maththreshold \
-mathtolerance meaningasis meaningful meaningfull meaningles \
-meaningless mugluespecdef multiplyby mutable mvlcurrentlyactive \
-nestedloopiterator noaligned noatomruling noboundary nohrule \
-nomathchar nooutputboxerror norelax normalizelinemode normalizeparmode \
-noscript nospaces nosubprescript nosubscript nosuperprescript \
-nosuperscript novrule numericscale numericscaled numexperimental \
-numexpression optionalboundary orelse orphanlinefactors orphanpenalties \
-orunless outputbox overloaded overloadmode overshoot \
-pageboundary pageexcess pageextragoal pagefistretch pagelastdepth \
-pagelastfilllstretch pagelastfillstretch pagelastfilstretch pagelastfistretch pagelastheight \
-pagelastshrink pagelaststretch pagevsize parametercount parameterdef \
-parameterindex parametermark parametermode parattribute pardirection \
-parfillleftskip parfillrightskip parinitleftskip parinitrightskip paroptions \
-parpasses parpassesexception parshapewidth permanent pettymuskip \
-positdef postexhyphenchar posthyphenchar postinlinepenalty postshortinlinepenalty \
-prebinoppenalty predisplaygapfactor preexhyphenchar prehyphenchar preinlinepenalty \
-prerelpenalty preshortinlinepenalty previousloopiterator primescript protecteddetokenize \
-protectedexpandeddetokenize protrudechars protrusionboundary pxdimen quitloop \
-quitloopnow quitvmode rdivide rdivideby realign \
-resetlocalboxes resetmathspacing restorecatcodetable retained retokenized \
-rightmarginkern righttwindemerits rpcode savecatcodetable scaledemwidth \
-scaledexheight scaledextraspace scaledfontcharba scaledfontchardp scaledfontcharht \
-scaledfontcharic scaledfontcharta scaledfontcharwd scaledfontdimen scaledinterwordshrink \
-scaledinterwordspace scaledinterwordstretch scaledmathaxis scaledmathemwidth scaledmathexheight \
-scaledmathstyle scaledslantperpoint scantextokens scriptspaceafterfactor scriptspacebeforefactor \
-scriptspacebetweenfactor semiexpand semiexpanded semiprotected setdefaultmathcodes \
-setfontid setmathatomrule setmathdisplaypostpenalty setmathdisplayprepenalty setmathignore \
-setmathoptions setmathpostpenalty setmathprepenalty setmathspacing shapingpenaltiesmode \
-shapingpenalty shortinlinemaththreshold shortinlineorphanpenalty showcodestack showstack \
-singlelinepenalty snapshotpar spacechar spacefactormode spacefactoroverload \
-spacefactorshrinklimit spacefactorstretchlimit specificationdef splitextraheight splitlastdepth \
-splitlastheight splitlastshrink splitlaststretch srule subprescript \
-subscript superprescript superscript supmarkmode swapcsvalues \
-tabsize textdirection thewithoutunit tinymuskip tocharacter \
-toddlerpenalties todimension tohexadecimal tointeger tokenized \
-toksapp tokspre tolerant tomathstyle toscaled \
-tosparsedimension tosparsescaled tpack tracingadjusts tracingalignments \
-tracingbalancing tracingexpressions tracingfitness tracingfullboxes tracinghyphenation \
-tracinginserts tracinglevels tracinglists tracinglooseness tracingmarks \
-tracingmath tracingmvl tracingnodes tracingorphans tracingpasses \
-tracingpenalties tracingtoddlers tsplit uleaders undent \
-unexpandedendless unexpandedloop unexpandedrepeat unhpack unletfrozen \
-unletprotected untraced unvpack variablefam vbadnessmode \
-vbalance vbalancedbox vbalanceddeinsert vbalanceddiscard vbalancedinsert \
-vbalancedreinsert vbalancedtop virtualhrule virtualvrule vpack \
-vpenalty vsplitchecks wordboundary wrapuppar xdefcsname \
-xtoks xtoksapp xtokspre 
+edivideby efcode emergencyleftskip emergencyrightskip emptyparagraphmode \
+endlocalcontrol endmathgroup endmvl endsimplegroup enforced \
+etexexprmode etoks etoksapp etokspre eufactor \
+everybeforepar everymathatom everytab exapostrophechar exceptionpenalty \
+expand expandactive expandafterpars expandafterspaces expandcstoken \
+expanded expandedafter expandeddetokenize expandedendless expandedloop \
+expandedrepeat expandparameter expandtoken expandtoks explicitdiscretionary \
+explicithyphenpenalty explicititaliccorrection explicitspace firstvalidlanguage fitnessclasses \
+float floatdef floatexpr flushmarks flushmvl \
+fontcharba fontcharta fontid fontidentifier fontmathcontrol \
+fontspecdef fontspecid fontspecifiedname fontspecifiedsize fontspecscale \
+fontspecslant fontspecweight fontspecxscale fontspecyscale fonttextcontrol \
+forcedleftcorrection forcedrightcorrection formatname frozen futurecsname \
+futuredef futureexpand futureexpandis futureexpandisap gdefcsname \
+givenmathstyle gleaders glet gletcsname glettonothing \
+gluespecdef glyph glyphdatafield glyphoptions glyphscale \
+glyphscriptfield glyphscriptscale glyphscriptscriptscale glyphslant glyphstatefield \
+glyphtextscale glyphweight glyphxoffset glyphxscale glyphxscaled \
+glyphyoffset glyphyscale glyphyscaled gtoksapp gtokspre \
+hbadnessmode hccode hjcode hmcode holdingmigrations \
+hpack hpenalty hyphenationmin hyphenationmode ifabsdim \
+ifabsfloat ifabsnum ifarguments ifboolean ifchkdim \
+ifchkdimension ifchkdimexpr ifchknum ifchknumber ifchknumexpr \
+ifcmpdim ifcmpnum ifcondition ifcramped ifcstok \
+ifdimexpression ifdimval ifempty ifflags iffloat \
+ifhaschar ifhastok ifhastoks ifhasxtoks ifinalignment \
+ifincsname ifinsert ifintervaldim ifintervalfloat ifintervalnum \
+iflastnamedcs iflist ifmathparameter ifmathstyle ifnumexpression \
+ifnumval ifparameter ifparameters ifrelax iftok \
+ifzerodim ifzerofloat ifzeronum ignorearguments ignoredepthcriterion \
+ignorenestedupto ignorepars ignorerest ignoreupto immediate \
+immutable indexedsubprescript indexedsubscript indexedsuperprescript indexedsuperscript \
+indexofcharacter indexofregister inherited initcatcodetable initialpageskip \
+initialtopskip insertbox insertcopy insertdepth insertdistance \
+insertheight insertheights insertlimit insertlinedepth insertlineheight \
+insertmaxdepth insertmode insertmultiplier insertpenalty insertprogress \
+insertshrink insertstorage insertstoring insertstretch insertunbox \
+insertuncopy insertwidth instance integerdef lastarguments \
+lastatomclass lastboundary lastchkdimension lastchknumber lastleftclass \
+lastloopiterator lastnamedcs lastnodesubtype lastpageextra lastparcontext \
+lastpartrigger lastrightclass leftmarginkern lefttwindemerits letcharcode \
+letcsname letfrozen letmathatomrule letmathparent letmathspacing \
+letprotected lettolastnamedcs lettonothing linebreakchecks linebreakoptional \
+linebreakpasses linedirection localbreakpar localbrokenpenalty localcontrol \
+localcontrolled localcontrolledendless localcontrolledloop localcontrolledrepeat localinterlinepenalty \
+localleftbox localleftboxbox localmiddlebox localmiddleboxbox localpretolerance \
+localrightbox localrightboxbox localtolerance lpcode luaboundary \
+luabytecode luabytecodecall luacopyinputnodes luadef luaescapestring \
+luafunction luafunctioncall luametatexmajorversion luametatexminorversion luametatexrelease \
+luatexbanner luatexrevision luatexversion mathatom mathatomglue \
+mathatomskip mathbackwardpenalties mathbeginclass mathboundary mathcharclass \
+mathcharfam mathcharslot mathcheckfencesmode mathclass mathdictgroup \
+mathdictionary mathdictproperties mathdirection mathdiscretionary mathdisplaymode \
+mathdisplaypenaltyfactor mathdisplayskipmode mathdoublescriptmode mathendclass matheqnogapstep \
+mathfontcontrol mathforwardpenalties mathgluemode mathgroupingmode mathinlinepenaltyfactor \
+mathleftclass mathlimitsmode mathmainstyle mathnolimitsmode mathparentstyle \
+mathpenaltiesmode mathpretolerance mathrightclass mathrulesfam mathrulesmode \
+mathscale mathscriptsmode mathslackmode mathspacingmode mathstack \
+mathstackstyle mathstyle mathstylefontid mathsurroundmode mathsurroundskip \
+maththreshold mathtolerance meaningasis meaningful meaningfull \
+meaningles meaningless mugluespecdef multiplyby mutable \
+mvlcurrentlyactive nestedloopiterator noaligned noatomruling noboundary \
+nohrule nomathchar nooutputboxerror norelax normalizelinemode \
+normalizeparmode noscript nospaces nosubprescript nosubscript \
+nosuperprescript nosuperscript novrule numericscale numericscaled \
+numexperimental numexpression optionalboundary orelse orphanlinefactors \
+orphanpenalties orunless outputbox overloaded overloadmode \
+overshoot pageboundary pageexcess pageextragoal pagefistretch \
+pagelastdepth pagelastfilllstretch pagelastfillstretch pagelastfilstretch pagelastfistretch \
+pagelastheight pagelastshrink pagelaststretch pagevsize parametercount \
+parameterdef parameterindex parametermark parametermode parattribute \
+pardirection parfillleftskip parfillrightskip parinitleftskip parinitrightskip \
+paroptions parpasses parpassesexception parshapewidth permanent \
+pettymuskip positdef postexhyphenchar posthyphenchar postinlinepenalty \
+postshortinlinepenalty prebinoppenalty predisplaygapfactor preexhyphenchar prehyphenchar \
+preinlinepenalty prerelpenalty preshortinlinepenalty previousloopiterator primescript \
+protecteddetokenize protectedexpandeddetokenize protrudechars protrusionboundary pxdimen \
+quitloop quitloopnow quitvmode rdivide rdivideby \
+realign resetlocalboxes resetmathspacing restorecatcodetable retained \
+retokenized rightmarginkern righttwindemerits rpcode savecatcodetable \
+scaledemwidth scaledexheight scaledextraspace scaledfontcharba scaledfontchardp \
+scaledfontcharht scaledfontcharic scaledfontcharta scaledfontcharwd scaledfontdimen \
+scaledinterwordshrink scaledinterwordspace scaledinterwordstretch scaledmathaxis scaledmathemwidth \
+scaledmathexheight scaledmathstyle scaledslantperpoint scantextokens scriptspaceafterfactor \
+scriptspacebeforefactor scriptspacebetweenfactor semiexpand semiexpanded semiprotected \
+setdefaultmathcodes setfontid setmathatomrule setmathdisplaypostpenalty setmathdisplayprepenalty \
+setmathignore setmathoptions setmathpostpenalty setmathprepenalty setmathspacing \
+shapingpenaltiesmode shapingpenalty shortinlinemaththreshold shortinlineorphanpenalty showcodestack \
+showstack singlelinepenalty snapshotpar spacechar spacefactormode \
+spacefactoroverload spacefactorshrinklimit spacefactorstretchlimit specificationdef splitextraheight \
+splitlastdepth splitlastheight splitlastshrink splitlaststretch srule \
+subprescript subscript superprescript superscript supmarkmode \
+swapcsvalues tabsize textdirection thewithoutunit tinymuskip \
+tocharacter toddlerpenalties todimension tohexadecimal tointeger \
+tokenized toksapp tokspre tolerant tomathstyle \
+toscaled tosparsedimension tosparsescaled tpack tracingadjusts \
+tracingalignments tracingbalancing tracingexpressions tracingfitness tracingfullboxes \
+tracinghyphenation tracinginserts tracinglevels tracinglists tracinglooseness \
+tracingmarks tracingmath tracingmvl tracingnodes tracingorphans \
+tracingpasses tracingpenalties tracingtoddlers tsplit uleaders \
+undent unexpandedendless unexpandedloop unexpandedrepeat unhpack \
+unletfrozen unletprotected untraced unvpack variablefam \
+vbadnessmode vbalance vbalancedbox vbalanceddeinsert vbalanceddiscard \
+vbalancedinsert vbalancedreinsert vbalancedtop virtualhrule virtualvrule \
+vpack vpenalty vsplitchecks wordboundary wrapuppar \
+xdefcsname xtoks xtoksapp xtokspre 
 
 keywordclass.tex.omega=\
 Omegaminorversion Omegarevision Omegaversion 
